kebechet-version-manager/base/controller/deploymentconfig.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: kebechet-version-manager-controller-deployment
  labels:
    app: kebechet-version-manager-controller
spec:
  replicas: 1
  selector:
    matchLabels:
      app: kebechet-version-manager-controller
  template:
    metadata:
      labels:
        app: kebechet-version-manager-controller
    spec:
      containers:
      - name: kebechet-version-manager-controller
        image: kebechet-version-manager-controller
        ports:
        - containerPort: 5000
        serviceAccountName: kebechet-version-manager-controller
---
apiVersion: v1
kind: Service
metadata:
  name: version-manager-service
spec:
  selector:
    app: kebechet-version-manager-controller
  ports:
  - port: 80
  - targetPort: 5000
---
apiVersion: route.openshift.io.v1
kind: Route
metadata:
  name: version-manager-route
spec:
  to:
    kind: Service
    name: version-manager-service
